--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^9.0.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "jquery": "^3.6.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.7",
     "morgan": "^1.10.0"
